fix: macros archive tabs not visible (#12627)

--- a/apps/helpdesk/src/pages/common/components/SecondaryNavbar/SecondaryNavbar.less
+++ b/apps/helpdesk/src/pages/common/components/SecondaryNavbar/SecondaryNavbar.less
@@ -36,6 +36,7 @@
     :global(.navbar).navbar {
         display: flex;
         flex-wrap: nowrap;
+        flex-shrink: 0;
         overflow-x: auto;
         overflow-y: hidden;
         background-color: var(--elevation-neutral-default);
